--- a/Team 3A/Prototype/index.html
+++ b/Team 3A/Prototype/index.html
@@ -1,27 +1,40 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DLP Prototype</title>
+  <title>DLP System</title>
   <link rel="stylesheet" href="styles.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-    <h1>DLP Prototype</h1>
-    <form id="dlpForm">
-      <label for="data">Enter Text:</label>
-      <input type="text" id="data" name="data" placeholder="Type sensitive data...">
-      
-      <label for="fileInput">Or Select a File:</label>
-      <input type="file" id="fileInput" name="fileInput" accept=".txt, .json, .csv">
-      
-      <button type="submit">Check Data</button>
-    </form>
-    <div class="response" id="responseBox"></div>
-  </div>
+  <div class="main-layout">
+    <!-- Sidebar -->
+    <nav class="sidebar">
+      <h2>DLP System</h2>
+      <ul>
+        <li><a href="#" id="dashboardLink"><i class="fas fa-home"></i> Dashboard</a></li>
+        <li><a href="#" id="uploadLink"><i class="fas fa-upload"></i> File Upload</a></li>
+        <li><a href="#" id="monitoringLink"><i class="fas fa-chart-line"></i> Monitoring</a></li>
+        <li><a href="#" id="settingsLink"><i class="fas fa-cogs"></i> Settings</a></li>
+        <li><a href="#" id="reportsLink"><i class="fas fa-file-alt"></i> Reports</a></li>
+      </ul>
+    </nav>
 
+    <!-- Main Content -->
+    <div class="content">
+      <header>
+        <h1>DLP System</h1>
+        <p>Ensure the security and compliance of your data.</p>
+      </header>
+      <main id="mainContent">
+        <p>Select an option from the sidebar to get started.</p>
+      </main>
+    </div>
+  </div>
   <script src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mammoth/1.4.2/mammoth.browser.min.js"></script>
 </body>
 </html>
-
